# linux_xtts_oatpp

./: CMakeLists.txt  Dockerfile  docker_build.sh  docker_run.sh  readme.md
lib/install_json/share/pkgconfig/: nlohmann_json.pc
lib/oatpp_install/lib/cmake/oatpp-1.3.0/: oatppTargets-noconfig.cmake  oatppTargets.cmake
src/: AppComponent.hpp  main.cpp
src/controller/: MyController.hpp
src/dto/: MyDTOs.hpp
src/xtts/: XTTSClient.cpp  XTTSClient.hpp
workspace/config/: config.json
